--- a/webapp/src/App.scss
+++ b/webapp/src/App.scss
@@ -16,6 +16,7 @@ $padding-small-padding: 40px;
 
 @import '~uikit/src/scss/components/align';
 @import '~uikit/src/scss/components/text';
+@import '~uikit/src/scss/components/flex';
 @import '~uikit/src/scss/components/height';
 @import '~uikit/src/scss/components/margin';
 @import '~uikit/src/scss/components/padding';
